# server

./: .env  .rustfmt.toml  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  routes.rs
config/: Cargo.toml
config/src/: lib.rs
context/measurement/: Cargo.toml
context/measurement/src/domain/: mod.rs
context/measurement/src/domain/uom/: dto.rs  entity.rs  mod.rs
context/measurement/src/handlers/: create_uom.rs  delete_uom.rs  get_uom_by_id.rs  list_uoms.rs  mod.rs
context/measurement/src/service/: mod.rs  uom_service.rs
context/product/: Cargo.toml
context/product/src/: lib.rs
context/product/src/domain/: mod.rs
context/product/src/domain/category/: dto.rs  entity.rs
context/product/src/domain/product/: dto.rs  entity.rs
context/product/src/domain/product_template/: dto.rs  entity.rs  mod.rs
context/product/src/domain/product_trait/: entity.rs
context/product/src/domain/product_trait_value/: entity.rs
context/product/src/handlers/: create_category.rs  create_product.rs  delete_category.rs  get_category_by_id.rs  list_categories.rs  list_products.rs  mod.rs
context/product/src/service/: catalog_service.rs  mod.rs  product_service.rs  product_template_service.rs
migration/src/: lib.rs  m20250320_132610_create_uom_table.rs  m20250324_125055_create_category_table.rs  m20250329_092600_create_product_template_table.rs  m20250329_093335_create_product_table.rs  m20250402_165028_create_product_trait_table.rs  m20250405_112311_create_product_trait_value_table.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: app_state.rs  error.rs  lib.rs  pagination.rs  response.rs
