
[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "config"]

[workspace.dependencies]
# Axum - Web framework
axum = "0.8.1"
# Tower - HTTP middleware
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }

# Utils
anyhow = "1.0.97"
dotenvy = "0.15.7"

[dependencies]
api = { path = "./api" }
tracing.workspace = true
