[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "config", "utils", "migration"]

[workspace.dependencies]
# Web framework and middleware
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
http = "1.0.0"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }

# Database
sea-orm = { version = "1.1.7", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-uuid",
  "with-chrono",
] }
sea-orm-migration = "1.1.7"


# Error handling
anyhow = "1.0.97"
thiserror = "2.0.12"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Configuration
dotenvy = "0.15.7"


[dependencies]
api = { path = "./api" }
