[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
config = { version = "0.1.0", path = "../config" }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
