[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
config = { version = "0.1.0", path = "../config" }
utils = { version = "0.1.0", path = "../utils" }

# Web framework and middleware
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
