[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
config = { version = "0.1.0", path = "../config" }
utils = { version = "0.1.0", path = "../utils" }
measurement = { version = "0.1.0", path = "../context/measurement" }

# Web framework and middleware
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
sea-orm.workspace = true
migration = { path = "../migration" }

anyhow.workspace = true

utoipa.workspace = true
utoipauto.workspace = true
utoipa-scalar = { version = "0.3", features = ["axum"] }
