[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Web framework
axum = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
