[package]
name = "measurement"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
axum = { workspace = true, features = ["macros"] }
utils = { path = "../../utils" }
