[package]
name = "product"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true, features = ["macros"] }
utils = { path = "../../utils" }
utoipa = { workspace = true }
measurement = { path = "../measurement" }
